# SIAOD-2-sem

5_1/: ИКБО-60-23 Шеенко В.docx
5_1/code/: CMakeLists.txt  Sort.cpp  z1.cpp  z2.cpp  z3.cpp  z4.cpp  z5.cpp
5_2/: 5_2 ИКБО-60-23 Шеенко В.docx  ИКБО-60-23 Шеенко В.docx
5_2/code/: BinFileWorker.h  CMakeLists.txt  FileWorker.h  OldBinFileWorker.h  main.cpp  task_1.cpp  task_2.cpp  z1_text  z2_text
6_1/: ИКБО-60-23 Шеенко В.docx
6_1/code/: CMakeLists.txt  SmallTest  ViolationList  Worker.h  task_1.cpp  task_1.h  task_2.cpp
6_2/: ИКБО-60-23 Шеенко В.docx
6_2/code/: BST.cpp  BST.h  CMakeLists.txt  main.cpp
7_1/: 7_1 ИКБО-60-23 Шеенко В.docx
7_1/code/: CMakeLists.txt
7_1/code/Z1/: BinFileWorker.cpp  BinFileWorker.h  BinarySearchTree.cpp  BinarySearchTree.h  main.cpp
7_1/code/Z2/: BinFileWorker.cpp  BinFileWorker.h  Node.h  SplayTree.cpp  SplayTree.h  ViolationRecord.h  main.cpp
7_1/code/Z3/: BinarySearchTree.cpp  BinarySearchTree.h  HashTable.h  Node.h  SplayTree.cpp  SplayTree.h  main.cpp  nums
7_2/code/: CMakeLists.txt  main.cpp
8_1/code/: CMakeLists.txt  Graph.cpp  Graph.h  graphs  main.cpp
8_1/code/z2/: main.cpp
